# 4_rational

./: CMakeLists.txt  README.md  main.cpp
src/: rational.cpp  rational.h
tests/: ts1.cpp
